--- a/SQLApp/SQLApp.csproj
+++ b/SQLApp/SQLApp.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.AzureAppConfiguration" Version="7.0.0" />
+    <PackageReference Include="Microsoft.FeatureManagement" Version="3.1.1" />
   </ItemGroup>
 
 </Project>
